# NotionAutomator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml
src/: arxiv_utils.py  base_utils.py  config_utils.py  console_utils.py  handler_utils.py  notion_utils.py  processor_utils.py
