[project]
name = "NotionAutomator"
version = "0.0.1"
description = "Running automation work in Notion with minimal configs."
authors = [{ name = "cxzhou35", email = "cxzhou35@zju.edu.cn" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
homepage = "https://github.com/cxzhou35/NotionAutomator"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "data"]

reportMissingImports = "warning"
reportMissingTypeStubs = false
reportPrivateImportUsage = false

[tool.isort]
profile = "hug"
skip = [".gitignore"]
length_sort = true
lines_between_sections = 0
lines_after_imports = 1
